# testTelecomProject

./: README.md  pyproject.toml  report.html
tests/: conftest.py  report.html  test_suite_1.py  test_suite_2.py  test_suite_3.py  test_suite_4.py  test_suite_5.py  test_units.py
tests/backup/: back_up.py  test_field.py
utilities/: constants.py
utilities/page_objects/: add_customer_page.py  add_customer_successful_page.py  add_tariff_page.py  add_tariff_successful_page.py  assign_plan_successful.py  assign_plan_to_customer_page.py  base_page.py  billing_customer_page.py  customer_look_up_page.py  index_page.py
